Fixed z-index of header

--- a/frontend/gop-frontend/src/app/app.component.css
+++ b/frontend/gop-frontend/src/app/app.component.css
@@ -2,6 +2,6 @@
   display: flex;
 }
 
-.main-container app-sidebar {
-  width: 85%;
+.main-container > app-sidebar {
+  width: 30%;
 }
