--- a/frontend/gop-frontend/src/app/header/header.component.css
+++ b/frontend/gop-frontend/src/app/header/header.component.css
@@ -4,6 +4,8 @@
   font-size: 1.5em;
   box-shadow: 0 4px 4px -2px gray;
   padding: 0.6em;
+  position: relative;
+  z-index: 10;
 }
 
 .header-auth-links {
